src/snapshots/geometrid__shape__tests__W pentomino rectangles.snap
---
source: src/shape.rs
expression: rectangles
---
[
    Rectangle {
        x: -1,
        y: 1,
        width: 2,
        height: 1,
    },
    Rectangle {
        x: 1,
        y: -1,
        width: 1,
        height: 2,
    },
    Rectangle {
        x: 0,
        y: 0,
        width: 1,
        height: 1,
    },
]
