src/snapshots/geometrid__shape__tests__Y pentomino rectangles.snap
---
source: src/shape.rs
expression: rectangles
---
[
    Rectangle {
        x: -2,
        y: 0,
        width: 4,
        height: 1,
    },
    Rectangle {
        x: 0,
        y: -1,
        width: 1,
        height: 1,
    },
]
