src/snapshots/geometrid__shape__tests__Z pentomino.snap
---
source: src/shape.rs
expression: outline
---
[
    RelativeCoordinate {
        x: -1,
        y: -1,
    },
    RelativeCoordinate {
        x: 1,
        y: -1,
    },
    RelativeCoordinate {
        x: 1,
        y: 1,
    },
    RelativeCoordinate {
        x: 2,
        y: 1,
    },
    RelativeCoordinate {
        x: 2,
        y: 2,
    },
    RelativeCoordinate {
        x: 0,
        y: 2,
    },
    RelativeCoordinate {
        x: 0,
        y: 0,
    },
    RelativeCoordinate {
        x: -1,
        y: 0,
    },
]
